force-app/main/default/objects/ClanMember__c/ClanMember__c.object-meta.xml
<CustomObject>
    <label>Clan Member</label>
    <nameField>
        <label>Clan Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clan Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>