force-app/main/default/objects/ClanMember__c/fields/Clan__c.field-meta.xml
<CustomField>
    <fullName>Clan__c</fullName>
    <label>Clan</label>
    <referenceTo>Clan__c</referenceTo>
    <relationshipLabel>Clan Members</relationshipLabel>
    <relationshipName>ClanMembers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>