force-app/main/default/objects/ClanMember__c/fields/ClanRank__c.field-meta.xml
<CustomField>
    <fullName>ClanRank__c</fullName>
    <label>Clan Rank</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>