force-app/main/default/objects/ClanMember__c/fields/DonationRatio__c.field-meta.xml
<CustomField>
    <fullName>DonationRatio__c</fullName>
    <formula>IF(DonationsReceived__c = 0, Donations__c, Donations__c / DonationsReceived__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donation Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>