force-app/main/default/objects/ClanMember__c/fields/Donations__c.field-meta.xml
<CustomField>
    <fullName>Donations__c</fullName>
    <label>Donations</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>