force-app/main/default/objects/ClanMember__c/fields/ExpLevel__c.field-meta.xml
<CustomField>
    <fullName>ExpLevel__c</fullName>
    <label>Exp. Level</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>