force-app/main/default/objects/ClanMember__c/fields/League__c.field-meta.xml
<CustomField>
    <fullName>League__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>League</label>
    <referenceTo>League__c</referenceTo>
    <relationshipLabel>Clan Members</relationshipLabel>
    <relationshipName>ClanMembers</relationshipName>
    <type>Lookup</type>
</CustomField>