force-app/main/default/objects/ClanMember__c/fields/PlayerHouse__c.field-meta.xml
<CustomField>
    <fullName>PlayerHouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Player House</label>
    <referenceTo>Player_House__c</referenceTo>
    <relationshipLabel>Clan Members</relationshipLabel>
    <relationshipName>ClanMembers</relationshipName>
    <type>Lookup</type>
</CustomField>