force-app/main/default/objects/ClanMember__c/fields/PreviousClanRank__c.field-meta.xml
<CustomField>
    <fullName>PreviousClanRank__c</fullName>
    <label>Previous Clan Rank</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>