force-app/main/default/objects/ClanMember__c/fields/Trophies__c.field-meta.xml
<CustomField>
    <fullName>Trophies__c</fullName>
    <label>Trophies</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>