force-app/main/default/objects/ClanMember__c/fields/VersusTrophies__c.field-meta.xml
<CustomField>
    <fullName>VersusTrophies__c</fullName>
    <label>Versus Trophies</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>